# llm-singularity

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: memory.h  safetensors.h  sampling.h  scheduler.h  server.h  tokenizer.h  types.h
core/src/: memory.cpp  safetensors.cpp  sampling.cpp  scheduler.cpp  server.cpp  tokenizer.cpp
docs/superpowers/plans/: 2026-03-22-llm-singularity.md
docs/superpowers/specs/: 2026-03-22-llm-serve-design.md
kernels/: CMakeLists.txt
kernels/include/kernels/: activations.h  attention.h  cublas_provider.h  embedding.h  kernel_provider.h  kv_cache.h  residual.h  rmsnorm.h  rope.h
kernels/src/: activations.cu  attention.cu  cublas_provider.cpp  embedding.cu  kv_cache.cu  residual.cu  rmsnorm.cu  rope.cu
models/include/models/: model_interface.h
models/llama/: CMakeLists.txt  llama_model.cpp  llama_model.h  llama_runtime.cpp
tests/: CMakeLists.txt  debug_dump.cpp  debug_embed.py  debug_embed_check.py  debug_forward.py  debug_gemm_check.py  debug_layer0.py  test_e2e.py  test_kernels.cpp  test_llama_model.cpp  test_memory.cpp  test_safetensors.cpp  test_sampling.cpp  test_scheduler.cpp  test_server.cpp  test_tokenizer.cpp  test_types.cpp
tools/: download_model.py  tokenizer_worker.py
